<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_card_number_node">%s, Card number</string>
    <string name="acc_label_cvc_node">%s, CVC</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_expiry_date_node">%s, Expiration date</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="acc_label_zip_short">ZIP</string>
    <string name="account_information_explanation">Please add &amp; review any account information below.</string>
    <string name="add_card">Add a new debit or credit card to make purchases in this app.</string>
    <string name="add_funds">Add Funds*</string>
    <string name="add_funds_explanation">Add funds now so you can talk to your connections once they are approved.</string>
    <string name="add_funds_now">Add Funds Now</string>
    <string name="add_new_card">+ Add New Card</string>
    <string name="added_funds">You added $%1$s to %2$s Account</string>
    <string name="address_city_required">Please enter your city</string>
    <string name="address_county_required">Please enter your county</string>
    <string name="address_label_address">Address</string>
    <string name="address_label_address_line1">Address line 1</string>
    <string name="address_label_address_line1_optional">Address line 1 (optional)</string>
    <string name="address_label_address_line2">Address line 2</string>
    <string name="address_label_address_line2_optional">Address line 2 (optional)</string>
    <string name="address_label_address_optional">Address (optional)</string>
    <string name="address_label_apt">Apt.</string>
    <string name="address_label_apt_optional">Apt. (optional)</string>
    <string name="address_label_city">City</string>
    <string name="address_label_city_optional">City (optional)</string>
    <string name="address_label_country">Country</string>
    <string name="address_label_county">County</string>
    <string name="address_label_county_optional">County (optional)</string>
    <string name="address_label_name">Name</string>
    <string name="address_label_name_optional">Name (optional)</string>
    <string name="address_label_phone_number">Phone number</string>
    <string name="address_label_phone_number_optional">Phone number (optional)</string>
    <string name="address_label_postal_code">Postal code</string>
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <string name="address_label_postcode">Postcode</string>
    <string name="address_label_postcode_optional">Postcode (optional)</string>
    <string name="address_label_province">Province</string>
    <string name="address_label_province_optional">Province (optional)</string>
    <string name="address_label_region_generic">State / Province / Region</string>
    <string name="address_label_region_generic_optional">State / Province / Region (optional)</string>
    <string name="address_label_state">State</string>
    <string name="address_label_state_optional">State (optional)</string>
    <string name="address_label_zip_code">ZIP code</string>
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <string name="address_label_zip_postal_code">ZIP/Postal code</string>
    <string name="address_label_zip_postal_code_optional">ZIP / Postal code (optional)</string>
    <string name="address_name_required">Please enter your name</string>
    <string name="address_phone_number_required">Please enter your phone number</string>
    <string name="address_postal_code_invalid">Your postal code is invalid</string>
    <string name="address_postcode_invalid">Your postcode is invalid</string>
    <string name="address_province_required">Please enter your province</string>
    <string name="address_region_generic_required">Please enter your State/Province/Region</string>
    <string name="address_required">Please enter your address</string>
    <string name="address_shipping_address">Shipping Address</string>
    <string name="address_state_required">Please enter your state</string>
    <string name="address_zip_invalid">Your ZIP code is invalid.</string>
    <string name="address_zip_postal_invalid">Your ZIP/Postal code is invalid</string>
    <string name="admin_call_message_title">MESSAGE</string>
    <string name="allow_camera_and_microphone">Please, allow the app to use camera and microphone</string>
    <string name="allow_storage">Please, allow the app to use external storage</string>
    <string name="amex_short">Amex</string>
    <string name="app_name">HomeWAV</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approval_needed">Approval Needed</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_accept">Accept</string>
    <string name="button_no">No</string>
    <string name="button_no_close_app">No, close app</string>
    <string name="button_report">Report</string>
    <string name="button_send_code">Send verification code</string>
    <string name="button_yes">Yes</string>
    <string name="call_answer">Answer</string>
    <string name="call_decline">Decline</string>
    <string name="call_ended">Video call with %1$s ended</string>
    <string name="call_message_body">Conduct Code violation. \10Visitation may be terminated.</string>
    <string name="call_not_recording_warning">This call is NOT being monitored and recorded</string>
    <string name="call_not_recording_warning_es">Esta llamada NO está siendo monitoreada o grabada.</string>
    <string name="call_recording_warning">This call is being \10monitored and recorded</string>
    <string name="call_recording_warning_es">Esta llamada está siendo monitoreada y grabada.</string>
    <string name="call_started">Video call with %1$s started</string>
    <string name="call_status_connecting">Connecting…</string>
    <string name="call_status_disconnecting">Disconnecting…</string>
    <string name="caption_forgot_password">Forgot Password</string>
    <string name="card_error">Card verification error</string>
    <string name="card_number_hint">1234 1234 1234 1234</string>
    <string name="card_success">Card added</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_deleted">Chat deleted</string>
    <string name="chat_message_body">Conduct code violation. Chat may be disabled.</string>
    <string name="chip_text">Chip text</string>
    <string name="label_date_of_birth">DATE OF BIRTH</string>
    <string name="label_explain_relationship">EXPLAIN RELATIONSHIP</string>
    <string name="label_facility">FACILITY</string>
    <string name="label_first_name">FIRST NAME</string>
    <string name="label_inmate_id">INMATE ID</string>
    <string name="label_inmate_name">INMATE NAME</string>
    <string name="label_last_name">LAST NAME</string>
    <string name="label_middle_name">MIDDLE NAME</string>
    <string name="label_relationship">RELATIONSHIP TO INMATE</string>
    <string name="label_state_incarceration">STATE OF INCARCERATION</string>
    <string name="label_suffix">SUFFIX</string>
    <string name="placeholder_select_inmate">Select Inmate</string>
    <string name="ua_default_channel_description">General app updates</string>
    <string name="ua_default_channel_name">Notifications</string>
    <string name="ua_low_priority_channel_description">Low priority Messages</string>
    <string name="ua_low_priority_channel_name">Low priority Notifications</string>
    <string name="ua_min_priority_channel_description">Minimum priority Messages</string>
    <string name="ua_min_priority_channel_name">Minimum priority Notifications</string>
    <string name="ua_news_channel_description">News Messages</string>
    <string name="ua_news_channel_name">News Notifications</string>
    <string name="ua_notification_button_accept">Accept</string>
    <string name="ua_notification_button_add">Add</string>
    <string name="ua_notification_button_add_to_calendar">Add to Calendar</string>
    <string name="ua_notification_button_book_now">Book Now</string>
    <string name="ua_notification_button_buy_now">Buy Now</string>
    <string name="ua_notification_button_decline">Decline</string>
    <string name="ua_notification_button_dislike">Dislike</string>
    <string name="ua_notification_button_download">Download</string>
    <string name="ua_notification_button_follow">Follow</string>
    <string name="ua_notification_button_less_like">Less Like This</string>
    <string name="ua_notification_button_like">Like</string>
    <string name="ua_notification_button_more_like">More Like This</string>
    <string name="ua_notification_button_no">No</string>
    <string name="ua_notification_button_opt_in">Opt-in</string>
    <string name="ua_notification_button_opt_out">Opt-out</string>
    <string name="ua_notification_button_rate_now">Rate Now</string>
    <string name="ua_notification_button_remind">Remind Me Later</string>
    <string name="ua_notification_button_save">Save</string>
    <string name="ua_notification_button_search">Search</string>
    <string name="ua_notification_button_share">Share</string>
    <string name="ua_notification_button_shop_now">Shop Now</string>
    <string name="ua_notification_button_tell_me_more">Tell Me More</string>
    <string name="ua_notification_button_unfollow">Unfollow</string>
    <string name="ua_notification_button_yes">Yes</string>
    <string name="ua_service_channel_description">Service Messages</string>
    <string name="ua_service_channel_name">Service Notifications</string>
    <string name="ua_urgent_channel_description">Urgent Messages</string>
    <string name="ua_urgent_channel_name">Urgent Notifications</string>
</resources>