<?xml version="1.0" encoding="utf-8"?>
<resouces xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <UrbanAirshipActionButtonGroup id="ua_yes_no_foreground">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_yes" android:icon="@drawable/ua_ic_notification_button_accept" foreground="true" id="yes"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_no" android:icon="@drawable/ua_ic_notification_button_decline" foreground="false" id="no"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_yes_no_background">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_yes" android:icon="@drawable/ua_ic_notification_button_accept" foreground="false" id="yes"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_no" android:icon="@drawable/ua_ic_notification_button_decline" foreground="false" id="no"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_accept_decline_foreground">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_accept" android:icon="@drawable/ua_ic_notification_button_accept" foreground="true" id="accept"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_decline" android:icon="@drawable/ua_ic_notification_button_decline" foreground="false" id="decline"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_accept_decline_background">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_accept" android:icon="@drawable/ua_ic_notification_button_accept" foreground="false" id="accept"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_decline" android:icon="@drawable/ua_ic_notification_button_decline" foreground="false" id="decline"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_download_share">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_download" android:icon="@drawable/ua_ic_notification_button_download" foreground="true" id="download"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_share" android:icon="@drawable/ua_ic_notification_button_share" foreground="true" id="share"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_remind_share">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_remind" android:icon="@drawable/ua_ic_notification_button_remind" foreground="false" id="remind"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_share" android:icon="@drawable/ua_ic_notification_button_share" foreground="true" id="share"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_opt_in_share">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_opt_in" android:icon="@drawable/ua_ic_notification_button_follow" foreground="false" id="opt_in"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_share" android:icon="@drawable/ua_ic_notification_button_share" foreground="true" id="share"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_opt_out_share">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_opt_out" android:icon="@drawable/ua_ic_notification_button_unfollow" foreground="false" id="opt_out"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_share" android:icon="@drawable/ua_ic_notification_button_share" foreground="true" id="share"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_follow_share">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_follow" android:icon="@drawable/ua_ic_notification_button_follow" foreground="false" id="follow"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_share" android:icon="@drawable/ua_ic_notification_button_share" foreground="true" id="share"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_unfollow_share">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_unfollow" android:icon="@drawable/ua_ic_notification_button_unfollow" foreground="false" id="unfollow"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_share" android:icon="@drawable/ua_ic_notification_button_share" foreground="true" id="share"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_shop_now_share">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_shop_now" android:icon="@drawable/ua_ic_notification_button_cart" foreground="true" id="shop_now"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_share" android:icon="@drawable/ua_ic_notification_button_share" foreground="true" id="share"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_buy_now_share">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_buy_now" android:icon="@drawable/ua_ic_notification_button_cart" foreground="true" id="buy_now"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_share" android:icon="@drawable/ua_ic_notification_button_share" foreground="true" id="share"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_more_like_less_like">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_more_like" android:icon="@drawable/ua_ic_notification_button_thumbs_up" foreground="false" id="more_like"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_less_like" android:icon="@drawable/ua_ic_notification_button_thumbs_down" foreground="false" id="less_like"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_like_dislike">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_like" android:icon="@drawable/ua_ic_notification_button_thumbs_up" foreground="false" id="like"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_dislike" android:icon="@drawable/ua_ic_notification_button_thumbs_down" foreground="false" id="dislike"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_like_share">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_like" android:icon="@drawable/ua_ic_notification_button_thumbs_up" foreground="false" id="like"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_share" android:icon="@drawable/ua_ic_notification_button_share" foreground="true" id="share"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_shop_now">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_shop_now" android:icon="@drawable/ua_ic_notification_button_cart" foreground="true" id="shop_now"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_buy_now">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_buy_now" android:icon="@drawable/ua_ic_notification_button_cart" foreground="true" id="buy_now"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_follow">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_follow" android:icon="@drawable/ua_ic_notification_button_follow" foreground="false" id="follow"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_unfollow">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_unfollow" android:icon="@drawable/ua_ic_notification_button_unfollow" foreground="false" id="unfollow"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_opt_in">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_opt_in" android:icon="@drawable/ua_ic_notification_button_follow" foreground="false" id="opt_in"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_opt_out">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_opt_out" android:icon="@drawable/ua_ic_notification_button_unfollow" foreground="false" id="opt_out"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_remind_me_later">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_remind" android:icon="@drawable/ua_ic_notification_button_remind" foreground="false" id="remind"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_share">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_share" android:icon="@drawable/ua_ic_notification_button_share" foreground="true" id="share"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_download">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_download" android:icon="@drawable/ua_ic_notification_button_download" foreground="true" id="download"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_like">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_like" android:icon="@drawable/ua_ic_notification_button_thumbs_up" foreground="false" id="like"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_icons_up_down">
        <UrbanAirshipActionButton android:icon="@drawable/ua_ic_notification_button_thumbs_up" description="thumbs up icon" foreground="false" id="up"/>
        <UrbanAirshipActionButton android:icon="@drawable/ua_ic_notification_button_thumbs_down" description="thumbs down icon" foreground="false" id="down"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_icons_happy_sad">
        <UrbanAirshipActionButton android:icon="@drawable/ua_ic_notification_button_happy" description="happy icon" foreground="false" id="happy"/>
        <UrbanAirshipActionButton android:icon="@drawable/ua_ic_notification_button_sad" description="sad icon" foreground="false" id="sad"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_add_calendar_remind">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_add_to_calendar" android:icon="@drawable/ua_ic_notification_button_event" foreground="true" id="add_calendar"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_remind" android:icon="@drawable/ua_ic_notification_button_remind" foreground="false" id="remind"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_add">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_add" android:icon="@drawable/ua_ic_notification_button_add" foreground="true" id="add"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_save">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_save" android:icon="@drawable/ua_ic_notification_button_save" foreground="false" id="save"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_follow_save">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_follow" android:icon="@drawable/ua_ic_notification_button_follow" foreground="false" id="follow"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_save" android:icon="@drawable/ua_ic_notification_button_save" foreground="false" id="save"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_opt_in_remind">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_opt_in" android:icon="@drawable/ua_ic_notification_button_follow" foreground="false" id="opt_in"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_remind" android:icon="@drawable/ua_ic_notification_button_remind" foreground="false" id="remind"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_more_info">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_tell_me_more" android:icon="@drawable/ua_ic_notification_button_info" foreground="true" id="more_info"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_rate_remind">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_rate_now" foreground="true" id="rate"/>
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_remind" android:icon="@drawable/ua_ic_notification_button_remind" foreground="false" id="remind"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_rate">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_rate_now" foreground="true" id="rate"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_search">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_search" android:icon="@drawable/ua_ic_notification_button_search" foreground="true" id="search"/>
    </UrbanAirshipActionButtonGroup>
    <UrbanAirshipActionButtonGroup id="ua_book">
        <UrbanAirshipActionButton android:label="@string/ua_notification_button_book_now" android:icon="@drawable/ua_ic_notification_button_book" foreground="true" id="book"/>
    </UrbanAirshipActionButtonGroup>
</resouces>
