<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:id="@+id/labelState" android:layout_marginTop="@dimen/base_offset" android:text="@string/label_state_incarceration" android:layout_marginStart="@dimen/base_offset" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/TextView.Label"/>
    <Spinner android:id="@+id/spinnerState" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/labelState" style="@style/Spinner.Register"/>
    <TextView android:id="@+id/labelFaculty" android:layout_marginTop="@dimen/enlarged_offset" android:text="@string/label_facility" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/spinnerState" style="@style/TextView.Label"/>
    <Spinner android:id="@+id/spinnerFacility" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/labelFaculty" style="@style/Spinner.Register"/>
    <TextView android:id="@+id/labelInmateName" android:layout_marginTop="@dimen/enlarged_offset" android:text="@string/label_inmate_name" android:labelFor="@+id/editInmateName" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/spinnerFacility" style="@style/TextView.Label"/>
    <com.forasoft.homewavvisitor.ui.views.InstantAutoCompleteTextView android:textSize="@dimen/standard" android:textColorHint="@color/textGray" android:id="@+id/editInmateName" android:hint="@string/placeholder_select_inmate" android:completionThreshold="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/labelInmateName" app:layout_constraintTop_toBottomOf="@+id/labelInmateName" style="@style/EditText.Register.Autocomplete"/>
    <TextView android:id="@+id/labelInmateId" android:layout_marginTop="@dimen/enlarged_offset" android:text="@string/label_inmate_id" android:labelFor="@+id/editInmateId" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/editInmateName" style="@style/TextView.Label"/>
    <EditText android:id="@+id/editInmateId" android:digits="0123456789" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/labelInmateId" style="@style/EditText.Register.Numeric"/>
    <TextView android:id="@+id/labelFirstName" android:layout_marginTop="@dimen/enlarged_offset" android:text="@string/label_first_name" android:labelFor="@+id/editInmateFirstName" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/editInmateId" style="@style/TextView.Label"/>
    <EditText android:id="@+id/editInmateFirstName" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/labelFirstName" app:layout_constraintTop_toBottomOf="@+id/labelFirstName" style="@style/EditText.Register"/>
    <TextView android:id="@+id/labelLastName" android:layout_marginTop="@dimen/enlarged_offset" android:text="@string/label_last_name" android:labelFor="@+id/editInmateLastName" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/editInmateFirstName" style="@style/TextView.Label"/>
    <EditText android:id="@+id/editInmateLastName" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/labelLastName" app:layout_constraintTop_toBottomOf="@+id/labelLastName" style="@style/EditText.Register"/>
    <TextView android:id="@+id/labelMiddleName" android:layout_marginTop="@dimen/enlarged_offset" android:text="@string/label_middle_name" android:labelFor="@+id/editInmateMiddleName" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/editInmateLastName" style="@style/TextView.Label"/>
    <EditText android:id="@+id/editInmateMiddleName" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/labelMiddleName" app:layout_constraintTop_toBottomOf="@+id/labelMiddleName" style="@style/EditText.Register"/>
    <TextView android:id="@+id/labelSuffix" android:layout_marginTop="@dimen/enlarged_offset" android:text="@string/label_suffix" android:labelFor="@+id/editSuffix" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/editInmateMiddleName" style="@style/TextView.Label"/>
    <EditText android:id="@+id/editSuffix" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/labelSuffix" app:layout_constraintTop_toBottomOf="@+id/labelSuffix" style="@style/EditText.Register"/>
    <TextView android:id="@+id/labelDateOfBirth" android:layout_marginTop="@dimen/enlarged_offset" android:text="@string/label_date_of_birth" android:labelFor="@+id/editDateOfBirth" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/editSuffix" style="@style/TextView.Label"/>
    <TextView android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/editDateOfBirth" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@string/label_date_of_birth" app:layout_constraintTop_toBottomOf="@+id/labelDateOfBirth" style="@style/EditText.Register.DateOfBirth"/>
    <androidx.constraintlayout.widget.Group android:id="@+id/groupAddInmate" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" app:constraint_referenced_ids="labelDateOfBirth,editDateOfBirth,labelSuffix,editSuffix,labelMiddleName,editInmateMiddleName,labelLastName,editInmateLastName,labelFirstName,editInmateFirstName,labelInmateId,editInmateId"/>
    <androidx.constraintlayout.widget.Group android:id="@+id/groupInmateAutocomplete" android:layout_width="match_parent" android:layout_height="match_parent" app:constraint_referenced_ids="labelInmateName,editInmateName"/>
    <TextView android:id="@+id/labelRelationship" android:layout_marginTop="@dimen/enlarged_offset" android:text="@string/label_relationship" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/editDateOfBirth" style="@style/TextView.Label"/>
    <Spinner android:enabled="false" android:id="@+id/spinnerRelationship" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/labelRelationship" app:layout_constraintTop_toBottomOf="@+id/labelRelationship" style="@style/Spinner.Register"/>
    <TextView android:id="@+id/labelExplainRelationship" android:layout_marginTop="@dimen/enlarged_offset" android:text="@string/label_explain_relationship" android:labelFor="@+id/editExplanation" app:layout_constraintStart_toStartOf="@+id/labelState" app:layout_constraintTop_toBottomOf="@+id/spinnerRelationship" style="@style/TextView.Label"/>
    <EditText android:id="@+id/editExplanation" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/labelExplainRelationship" app:layout_constraintTop_toBottomOf="@+id/labelExplainRelationship" style="@style/EditText.Register"/>
    <androidx.constraintlayout.widget.Group android:id="@+id/groupExplain" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="labelExplainRelationship,editExplanation"/>
    <Space android:layout_width="match_parent" android:layout_height="@dimen/base_offset" app:layout_constraintTop_toBottomOf="@+id/editExplanation"/>
</androidx.constraintlayout.widget.ConstraintLayout>
